k8s/02-service-b-golang.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-golang
  labels:
    app: service-b-golang
spec:
  replicas: 2
  selector:
    matchLabels:
      app: service-b-golang
  template:
    metadata:
      labels:
        app: service-b-golang
    spec:
      containers:
      - name: golang-app
        image: localhost/service-b-golang:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /api/v1/golang/healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/v1/golang/readyz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          requests:
            memory: "32Mi"
            cpu: "25m"
          limits:
            memory: "64Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: service-b-golang
  labels:
    app: service-b-golang
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: service-b-golang
