k8s/07-apm-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apm-server
  labels:
    app.kubernetes.io/part-of: k8s-microservices-lab
spec:
  type: ExternalName
  externalName: monitoring-apm-server
  ports:
  - port: 8200
    targetPort: 8200
    name: http
